fix: updates basic styling to bring back scrollbars

--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,11 @@
 .app {
+  height: 100dvh;
+  max-height: 100dvh;
+  width: 100dvw;
+  max-width: 100dvw;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 
   .suspense-spin {
     margin: auto;
