--- a/src/Page/Portal/Portal.less
+++ b/src/Page/Portal/Portal.less
@@ -7,7 +7,7 @@
   background: #ffffff;
   flex: 1;
   display: flex;
-  min-height: 90vh;
+  overflow: hidden;
 
   .home {
     padding: 20px;
