--- a/src/index.less
+++ b/src/index.less
@@ -3,8 +3,21 @@
 html,
 body {
   margin: 0;
-  width: 100%;
-  height: 100%;
+}
+
+.root {
+
+  .ant-app {
+    display: contents;
+  }
+
+  .suspense-spin {
+    margin: auto;
+
+    .suspense-spin-icon {
+      font-size: 48px;
+    }
+  }
 }
 
 .ant-modal-mask,
